@@ -15,6 +15,7 @@ VERSION 2.9-Beta 1
      compilers currently supported by KDE.
 
   BUGFIXES:
+   * Fix crash when starting Amarok with an iPod mounted. (BR 329498)
    * Also fetch cover art from xiph-comments with METADATA_BLOCK_PICTURE tag.
      Patch by Martin Brodbeck <martin@brodbeck-online.de>. (BR 328451)
    * Fix crash on quit when Amarok is in the middle of fadeout. (BR 325723)
